# mlops

./: .gitignore  README.md
lesson1/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SEMINAR.md  pyproject.toml
lesson1/notebooks/: .gitkeep
lesson1/seminar/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  basic_train.py  docker-compose.yml  pyproject.toml
lesson1/seminar/configs/: train.yaml
lesson1/seminar/mlartifacts/305277930694855864/0636ef4aa8a74bc2b9c97875c4324e96/artifacts/prefect_model_v1/: MLmodel  conda.yaml  requirements.txt
lesson1/seminar/mlartifacts/305277930694855864/38161bd8dede455997dc10f5cc703027/artifacts/prefect_model_v1/: MLmodel  model.pkl  python_env.yaml
lesson1/seminar/mlartifacts/718260156632891084/3c266f6ff1a545c6b40ce4d48c59d149/artifacts/model_v1/: MLmodel
lesson1/seminar/mlartifacts/774861912600611353/79f391e714c64973ab5d1bbd5e6c5f3b/artifacts/prefect_model_v1/: MLmodel  model.pkl
lesson1/seminar/notebooks/: test_mlflow_model.ipynb
lesson1/seminar/src/app/: __init__.py
lesson1/seminar/tests/: test_sanity.py
lesson1/src/: __init__.py
lesson1/src/app/: train.py
lesson1/tests/: test_sanity.py
lesson2/: .gitignore  README.md
lesson2/seminar/gx/expectations/: .ge_store_backend_id  tips_validation_suite.json
lesson2/seminar/step1_setup/: README.md  requirements.txt
lesson2/seminar/step2_dvc_data/: .gitignore  README.md  dvc.yaml
lesson2/seminar/step3_pipeline_basic/: Makefile  README.md  dvc.yaml  params.yaml
lesson2/seminar/step3_pipeline_basic/src/: train.py
lesson2/seminar/step4_5_datahub_integration/: .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  requirements.txt  test_datahub.py
lesson2/seminar/step4_5_datahub_integration/src/: validate_data.py
lesson2/seminar/step4_5_validation_fail_demo/: README.md  dvc.yaml  params.yaml
lesson2/seminar/step4_5_validation_fail_demo/src/: get_data.py  preprocess.py
lesson2/seminar/step4_ge_validation_data/: .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
lesson2/seminar/step4_ge_validation_data/src/: evaluate.py  validate_data.py  validate_model.py
lesson2/seminar/step5_homework_model_validation_and_metrics/: README.md
lesson2/seminar/step_bonus_s3_storage/: .gitignore  Makefile  README.md  create_bucket.py  docker-compose.yml  requirements.txt
lesson2/seminar/step_bonus_s3_storage/src/: create_bad_data.py  evaluate.py  get_data.py  validate_data.py
lesson3/: .gitignore  README.md
lesson3/seminar/: README.md
lesson3/seminar/step1_dvc_mlflow_pipeline/: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  run_batch.sh
lesson3/seminar/step1_dvc_mlflow_pipeline/src/: evaluate.py  get_data.py  merge_data.py  prepare_batch.py  preprocess.py  train.py
lesson3/seminar/step2_prefect_orchestration/: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  run_prefect_batch.sh
lesson3/seminar/step2_prefect_orchestration/flows/: training_flow.py
lesson3/seminar/step2_prefect_orchestration/src/: data_tasks.py  model_tasks.py
lesson3/seminar/step3_prefect_cron/: .gitignore  Makefile  README.md  params.yaml  pyproject.toml  run_automated_demo.sh
lesson3/seminar/step3_prefect_cron/deployments/: setup_deployment.py
lesson4/: README.md
lesson4/seminar/: README.md
lesson4/seminar/step1_onnx_model/: README.md  improve_onnx_generation.py  main.py  pyproject.toml  test_real_image.py
lesson4/seminar/step1_onnx_model/src/: model_converter.py  onnx_tester.py
lesson4/seminar/step2_fastapi_inference/: README.md  client_test.py  main.py  pyproject.toml  test_onnx_api.py
lesson4/seminar/step2_fastapi_inference/src/: api.py  model_service.py
lesson4/seminar/step3_batch_optimization/: README.md  main.py  pyproject.toml
lesson4/seminar/step3_batch_optimization/results/: optimization_results.csv
lesson4/seminar/step3_batch_optimization/src/: batch_optimizer.py
lesson4/seminar/step4_monitoring/: README.md  config.py  logger.py  main.py  monitor.py  monitor_config.yaml
lesson5/: .gitignore  README.md
lesson5/seminar/: README.md
lesson5/seminar/step1/: .gitignore  Makefile  README.md  pyproject.toml  train.py
lesson5/seminar/step1/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
lesson5/seminar/step1/catboost_info/learn/: events.out.tfevents
lesson5/seminar/step2/: Makefile  README.md  pyproject.toml
lesson5/seminar/step3/: .gitignore  Makefile  README.md  pyproject.toml
lesson5/seminar/step4/: Makefile  README.md  pyproject.toml
lesson5/seminar/step4/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
lesson5/seminar/step4/catboost_info/learn/: events.out.tfevents
lesson5/seminar/step4/catboost_info/test/: events.out.tfevents
lesson5/seminar/step4/flows/: active_learning_flow.py  baseline_flow.py  comparison_flow.py  continuous_training_flow.py
lesson5/seminar/step4/src/: __init__.py  active_learning.py  baseline_trainer.py  data_manager.py  model_trainer.py
lesson6/: .gitignore  README.md  SUMMARY.md
lesson6/seminar/: README.md
lesson6/seminar/step1_vllm_inference/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
lesson6/seminar/step1_vllm_inference/notebooks/: chat_demo.ipynb  demo.ipynb
lesson6/seminar/step1_vllm_inference/src/: __init__.py  llm_client.py
lesson6/seminar/step1_vllm_inference/test_scripts/: test_client.py  test_imports.py
lesson6/seminar/step2_function_calling/: .gitignore  Dockerfile.pose  Makefile  README.md  docker-compose.yml  pyproject.toml
lesson6/seminar/step2_function_calling/notebooks/: pose_demo.ipynb
lesson6/seminar/step2_function_calling/src/: __init__.py  pose_agent.py  pose_api.py
lesson6/seminar/step2_function_calling/test_scripts/: demo_animation.py  demo_simple.py  test_agent.py  test_debug_agent.py  test_imports.py  test_ollama_connection.py  test_pose_api.py  test_simple_agent.py
lesson6/seminar/step3_rag/: README.md  poses_database.json
(+18 files in other folders)
