[tool.poetry]
name = "app"
version = "0.1.0"
description = "Reproducible ML project with MLflow tracking"
authors = ["MLOps Student <student@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "1.5"
mlflow = "2.14"
pyyaml = "6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4"
ruff = "0.6"
black = "24.4"
mypy = "1.8"
pre-commit = "3.7"
setuptools = "^80.9.0"
jupyter = "^1.1.1"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
