[tool.poetry]
name = "continuous-training-step1"
version = "0.1.0"
description = "Step 1: Basic model training for Continuous Training seminar"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.0"
catboost = "^1.2.0"
numpy = "^1.24.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
