[tool.poetry]
name = "active-learning-step4"
version = "0.1.0"
description = "Step 4: Active Learning vs Full Dataset comparison"
authors = ["MLOps Course"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
catboost = "^1.2.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
mlflow = "^2.8.0"
prefect = "^3.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
