[tool.poetry]
name = "lesson6-step1"
version = "0.1.0"
description = "vLLM inference service with Qwen3-4B-Instruct"
authors = ["MLOps Course"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
